# devicemapper-rs

./: .gitignore  .mergify.yml  .packit.yaml  .travis.yml  CHANGES.txt  Cargo.toml  Makefile  README.md  _typos.toml  build.rs  dm_version.rs  rustfmt.toml
.githooks/: pre-commit
.github/workflows/: cargo.yml  dummy.yml  main.yml  nightly.yml  weekly.yml
devicemapper/: Cargo.toml  README.md
devicemapper-rs-sys/: Cargo.toml  README.md  build.rs  dm-ioctl.h  dm.h  sem.h
devicemapper-rs-sys/src/: lib.rs
devicemapper/src/: device.rs  dm.rs  lib.rs  types.rs
dm-devices/: Cargo.toml  Makefile  README.md
dm-devices/src/: cachedev.rs  lib.rs  lineardev.rs  loopbacked.rs  result.rs  segment.rs  shared.rs  shared_macros.rs  thindev.rs  thindevid.rs  thinpooldev.rs  types.rs
src/: cachedev.rs  consts.rs  device.rs  device.rs.in  deviceinfo.rs  dm.rs  dm_flags.rs  dm_ioctl.rs  dm_options.rs  errors.rs  flakeydev.rs  id_macros.rs  integrity.rs  lib.rs  lineardev.rs  lineardev.rs~  loopbacked.rs  range_macros.rs  result.rs  segment.rs  shared.rs  shared_macros.rs  test_lib.rs  thindev.rs  thindevid.rs  thinpooldev.rs  types.rs  units.rs  util.rs
src/core/: device.rs  deviceinfo.rs  dm.rs  dm_flags.rs  dm_ioctl.rs  dm_options.rs  dm_udev_sync.rs  errors.rs  mod.rs  sysvsem.rs  types.rs  util.rs
src/testing/: loopbacked.rs  mod.rs  test_lib.rs
tests/ci/: dm_test.sh
