[package]
name = "devicemapper"
version = "0.34.4"
authors = ["Stratis Developers <stratis-devel@lists.fedorahosted.org>"]
description = "A library for using Linux device mapper"
documentation = "https://docs.rs/devicemapper/"
repository = "https://github.com/stratis-storage/devicemapper-rs"
readme = "README.md"
categories = ["os::linux-apis", "api-bindings"]
keywords = ["Linux", "device", "mapper", "libdm", "storage"]
license = "MPL-2.0"
edition = "2021"
rust-version = "1.74.0"  # LOWEST SUPPORTED RUST TOOLCHAIN
exclude = [".clippy.toml", ".githooks/*", ".gitignore", ".github/*", "Makefile"]

[dependencies]
bitflags = "2.3.3"
cfg-if = "1.0.0"
nix = {version = "0.29.0", features=["fs", "ioctl", "mount"]}
env_logger="0.11.0"
semver = "1.0.0"
serde = "1.0.60"
rand = "0.9.0"
retry = {version = "2.0.0", default-features=false}
log = "0.4.14"
once_cell = "1.19.0"

[dev-dependencies]
assert_matches = "1.5.0"
libmount = "0.1.11"
loopdev-3 = "0.5.0"
tempfile = "3.7.0"

[dev-dependencies.uuid]
version = "1.0.0"
features = ["v4"]

[dependencies.devicemapper-sys]
version = "0.3.0"
path = "./devicemapper-rs-sys"

[build-dependencies.devicemapper-sys]
version = "0.3.0"
path = "./devicemapper-rs-sys"

[build-dependencies]
semver = "1.0.0"

[lints.rust]
warnings = { level = "deny" }
future_incompatible = { level = "deny", priority = 1 }
unused = { level = "deny", priority = 2}
rust_2018_idioms = { level = "deny", priority = 3 }
nonstandard_style = { level = "deny", priority = 4 }
unexpected_cfgs = { level = "deny", check-cfg = [
  'cfg(devicemapper41supported)',
  'cfg(devicemapper42supported)',
  'cfg(devicemapper437supported)',
  'cfg(devicemapper441supported)',
  'cfg(devicemapper46supported)'
] }

[lints.clippy]
all = { level = "deny" }
cargo = { level = "deny" , priority = 1}
multiple-crate-versions = { level = "allow", priority = 2 }

[features]
disable_cargo_metadata = ["devicemapper-sys/disable_cargo_metadata"]
