[package]
name = "devicemapper"
version = "0.34.6"
authors = ["Stratis Developers <stratis-devel@lists.fedorahosted.org>"]
description = "A library for using Linux device mapper"
documentation = "https://docs.rs/devicemapper/"
repository = "https://github.com/stratis-storage/devicemapper-rs"
readme = "README.md"
categories = ["os::linux-apis", "api-bindings"]
keywords = ["Linux", "device", "mapper", "libdm", "storage"]
license = "MPL-2.0"
edition = "2021"
rust-version = "1.85.0"  # LOWEST SUPPORTED RUST TOOLCHAIN
exclude = [".clippy.toml", ".githooks/*", ".gitignore", ".github/*", "Makefile"]

[dependencies.bitflags]
version = "2.4.1"

[dependencies.cfg-if]
version = "1.0.0"

[dependencies.devicemapper-sys]
version = "0.3.0"
path = "./devicemapper-rs-sys"

[dependencies.env_logger]
version="0.11.0"

[dependencies.log]
version = "0.4.17"

[dependencies.nix]
version = "0.31.1"
features=["fs", "ioctl", "mount"]

#[cfg(not(target_os = "android"))]
[dependencies.rand]
version = "0.10.0"

[dependencies.retry]
version = "2.0.0"
default-features=false

[dependencies.semver]
version = "1.0.0"

[dependencies.serde]
version = "1.0.166"

[build-dependencies.devicemapper-sys]
version = "0.3.0"
path = "./devicemapper-rs-sys"

[build-dependencies.semver]
version = "1.0.0"

[dev-dependencies.assert_matches]
version = "1.5.0"

[dev-dependencies.loopdev-3]
version = "0.5.0"

[dev-dependencies.procfs]
version = "0.18.0"

[dev-dependencies.tempfile]
version = "3.7.0"

[dev-dependencies.uuid]
version = "1.0.0"
features = ["v4"]

[lints.rust]
warnings = { level = "deny" }
future_incompatible = { level = "deny", priority = 1 }
unused = { level = "deny", priority = 2}
rust_2018_idioms = { level = "deny", priority = 3 }
nonstandard_style = { level = "deny", priority = 4 }
unexpected_cfgs = { level = "deny", priority = 5}

[lints.clippy]
all = { level = "deny" }
cargo = { level = "deny" , priority = 1}
multiple-crate-versions = { level = "allow", priority = 2 }

[features]
disable_cargo_metadata = ["devicemapper-sys/disable_cargo_metadata"]
