[package]
name = "devicemapper-sys"
version = "0.1.5"
authors = ["Stratis Developers <stratis-devel@lists.fedorahosted.org>"]
edition = "2021"
rust-version = "1.66.1"  # LOWEST SUPPORTED RUST TOOLCHAIN
description = "Low level bindings for devicemapper"
license = "MPL-2.0"
documentation = "https://docs.rs/devicemapper-rs-sys"
homepage = "https://stratis-storage.github.io/"
repository = "https://github.com/stratis-storage/devicemapper-rs"
keywords = ["storage", "devicemapper"]
categories = ["os::linux-apis", "external-ffi-bindings"]

[dependencies]
nix = "0.26.0"

[build-dependencies.bindgen]
default_features = false
features = ["runtime"]
version = "0.63.0"
