[package]
name = "devicemapper-sys"
version = "0.3.0"
authors = ["Stratis Developers <stratis-devel@lists.fedorahosted.org>"]
edition = "2021"
rust-version = "1.71.1"  # LOWEST SUPPORTED RUST TOOLCHAIN
description = "Low level bindings for devicemapper"
license = "MPL-2.0"
documentation = "https://docs.rs/devicemapper-rs-sys"
homepage = "https://stratis-storage.github.io/"
repository = "https://github.com/stratis-storage/devicemapper-rs"
keywords = ["storage", "devicemapper"]
categories = ["os::linux-apis", "external-ffi-bindings"]

[build-dependencies.bindgen]
default-features = false
features = ["runtime"]
version = "0.69.0"
