[package]
name = "devicemapper-sys"
version = "0.3.1"
authors = ["Stratis Developers <stratis-devel@lists.fedorahosted.org>"]
edition = "2021"
rust-version = "1.74.0"  # LOWEST SUPPORTED RUST TOOLCHAIN
description = "Low level bindings for devicemapper"
license = "MPL-2.0"
documentation = "https://docs.rs/devicemapper-rs-sys"
homepage = "https://stratis-storage.github.io/"
repository = "https://github.com/stratis-storage/devicemapper-rs"
keywords = ["storage", "devicemapper"]
categories = ["os::linux-apis", "external-ffi-bindings"]

[build-dependencies.bindgen]
default-features = false
features = ["runtime"]
version = "0.69.0"

[build-dependencies]
pkg-config = "0.3.31"

[lints.rust]
warnings = { level = "deny" }
future_incompatible = { level = "deny", priority = 1 }
unused = { level = "deny", priority = 2}
rust_2018_idioms = { level = "deny", priority = 3 }
nonstandard_style = { level = "deny", priority = 4 }

[lints.clippy]
all = { level = "deny" }
cargo = { level = "deny" , priority = 1}
multiple-crate-versions = { level = "allow", priority = 2 }

[features]
disable_cargo_metadata = []
