[package]
name = "dm-devices"
version = "0.15.0"
authors = ["Stratis Developers <stratis-devel@lists.fedorahosted.com>"]
description = "A library for constructing and manipulating devicemapper devices"
documentation = "https://docs.rs/devicemapper/"
# homepage = "..."
repository = "https://github.com/stratis-storage/devicemapper-rs"
readme = "README.md"
keywords = ["Linux", "device", "mapper", "libdm", "storage"]
license = "MPL-2.0"

[dependencies]
devicemapper = {path = "../devicemapper"}
nix = "0.9"
serde = "1"
log = "0.3"
env_logger="0.4"
clippy = {version = "0", optional = true}

[dev-dependencies]
loopdev = "0.1.1"
tempdir = "0.3.5"
